cmake_minimum_required(VERSION 3.26)
project(HyundaiSofteer)

set(CMAKE_CXX_STANDARD 14)

add_executable(HyundaiSofteer
        "CodeTree/최장 연속 부분 수열/연속되는 수 4.cpp"
        "CodeTree/최장 연속 부분 수열/T를 초과하는 연속 부분 수열.cpp"
        "CodeTree/배열 기록/시간에 따른 위치.cpp"
        "CodeTree/최장 연속 부분 수열/T를 초과하는 연속 부분 수열(RE).cpp"
)
