cmake_minimum_required(VERSION 3.26)
project(HyundaiSofteer)

set(CMAKE_CXX_STANDARD 14)

add_executable(HyundaiSofteer
#        "CodeTree/배열 기록/벌금은 누구에게.cpp"
#        "CodeTree/배열 기록/벌금은 누구에게(codetree).cpp"
#        "CodeTree/배열 기록/선두를 지켜라.cpp"
#        "CodeTree/시뮬레이션 (1)/구간 칠하기.cpp"
#        "CodeTree/시뮬레이션 (1)/블럭쌓는 명령2.cpp"
#        "CodeTree/시뮬레이션 (1)/최대로 겹치는 구간.cpp"
#        BOJ/2161_카드1.cpp
#        "현대그룹 유사기출/구간 합 구하기 5.cpp"
#        "현대그룹 유사기출/두 수의 합.cpp"
#        "현대그룹 유사기출/평범한 배낭.cpp"
#        "현대그룹 유사기출/테트로미노.cpp"
#        "BOJ/11053_가장 긴 증가하는 부분 수열.cpp"
        "BOJ/1874_스택 수열.cpp"
        BOJ/1094_막대기.cpp
        #        "CodeTree/최장 연속 부분 수열/연속되는 수 4.cpp"
#        "CodeTree/최장 연속 부분 수열/T를 초과하는 연속 부분 수열.cpp"
#        "CodeTree/배열 기록/만나는 그 순간.cpp"
#        "CodeTree/배열 기록/남은 횟수를 배열로 관리하기.cpp"
#        "CodeTree/배열 기록/남은 횟수를 배열로 관리하기.h"
        #        "CodeTree/최장 연속 부분 수열/T를 초과하는 연속 부분 수열(RE).cpp"
)
